--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.27.0",
     "slick-carousel": "^1.8.1"
   },
