--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^5.3.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
+    "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
